fixed the bug of contact form on smaller screens

--- a/src/components/cursor.scss
+++ b/src/components/cursor.scss
@@ -24,3 +24,8 @@
     transform: translate(-50%, -50%);
     pointer-events: none;
 }
+@media(max-width:576px){
+    .cursor{
+        display: none;
+    }
+}
