--- a/src/pages/Contact.scss
+++ b/src/pages/Contact.scss
@@ -32,7 +32,6 @@ $text-color: #fff;
         form {
             // position: relative;
             // display: flex;
-            width: 400px;
             // display: flex;
 
             // flex-direction: column;
@@ -78,14 +77,17 @@ $text-color: #fff;
                 textarea {
                     // margin: 30px 0;
                     width: 400px;
-                    outline: none;
                     font-family: sans-serif;
                     font-size: 16px;
                     background: transparent;
                     color: $text-color;
+                    outline: none;
                     border: none;
                     border-bottom: 1px solid rgba(white, 0.7);
                     padding: 0.5rem 0;
+                    @media screen and (max-width: 576px) {
+                        width: 90%;
+                    }
                 }
                 input:focus + label,
                 input:valid + label,
