--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,9 @@
   padding: 0;
   box-sizing: border-box;
   cursor: none;
+  @media screen and (max-width: 576px) {
+    cursor: default;
+  }
 }
 
 // setting the base font size
